image stretch fix

--- a/src/styles/cyberia-estates.css
+++ b/src/styles/cyberia-estates.css
@@ -117,9 +117,9 @@ p#apt-description, p.auctions-text, h2#sizestitle {
       img#estate-imgs{
         margin-top:1rem;
       }
-      img#benefits-image, image#roadmap-image {
-        max-width:100%;
-        max-height:10vh
+      img#benefits-image, img#roadmap-image {
+        width:100%;
+        max-height:95%;
       }
       section#roadmap, section#benefits{
         max-height:15vh;
